sab - added marketing material images

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -160,6 +160,16 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20part%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20part%202.png" alt="" /></a>
 				</div>
 
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%201.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/catalog%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%202.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/catalog%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/catalog%203.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/catalog%203.png" alt="" /></a>
+				</div>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/flyer.png"><img class="gallery1 with_border" id="function_candidates_1" src="img/sab/flyer.png" alt="" /></a>
+				</div>
+
 				<div id="disqus_thread"></div>
 				<script>
 
