sab - added more images and files

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -110,6 +110,12 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
+				<div style="margin-bottom: 19px;">
+					<img src="img/pdf%20icon.png" style="vertical-align:middle;"/>
+					<a target="_blank" href="img/sab/identity%20concept.pdf" style="vertical-align:middle;"> Brand Identity Concept</a>
+				</div>
+
+
                 <!--<div class="gallery">-->
 				    <!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
                 <!--</div>-->
@@ -125,9 +131,21 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20grid%20landing%20page.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20grid%20landing%20page.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/A4%204x8%20grid%20gallery.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/sab/A4%204x8%20grid%20gallery.png" alt="" /></a>
+				</div>
+
+				<div style="margin-bottom: 19px;">
+					<img src="img/pdf%20icon.png" style="vertical-align:middle;"/>
+					<a target="_blank" href="img/sab/copy.pdf" style="vertical-align:middle;"> Landing Page Copy</a>
+				</div>
+
+				<div style="margin-bottom: 19px;">
+					<img src="img/pdf%20icon.png" style="vertical-align:middle;"/>
+					<a target="_blank" href="img/sab/websiteanimations.pdf" style="vertical-align:middle;"> Landing Page Animations</a>
+				</div>
 
 				<h2>THE MOBILE APP</h2>
 
