sab - added landing page files

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -147,6 +147,12 @@
 					<a target="_blank" href="img/sab/websiteanimations.pdf" style="vertical-align:middle;"> Landing Page Animations</a>
 				</div>
 
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%201.jpg"><img style="vertical-align: top;" class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/landing%20page%201.jpg" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%202.jpg"><img style="vertical-align: top;" class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/landing%20page%202.jpg" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/landing%20page%203.jpg"><img style="vertical-align: top;" class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/landing%20page%203.jpg" alt="" /></a>
+				</div>
+
 				<h2>THE MOBILE APP</h2>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
