sab - added storyboards

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -110,6 +110,12 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/storyboard1.png"><img class="gallery1" id="function_candidates_1" src="img/sab/storyboard1.png" alt="" /></a>
+					<p class="gallery_separator"></p>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/sab/storyboard2.png"><img class="gallery1" id="function_candidates_1" src="img/sab/storyboard2.png" alt="" /></a>
+				</div>
+
 				<div style="margin-bottom: 19px;">
 					<img src="img/pdf%20icon.png" style="vertical-align:middle;"/>
 					<a target="_blank" href="img/sab/identity%20concept.pdf" style="vertical-align:middle;"> Brand Identity Concept</a>
