sab - added mobile screens

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -170,9 +170,16 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/0.splashscreen.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/0.splashscreen.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/1.home%20screen%20-%20in%20range.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/1.home%20screen%20-%20in%20range.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/2.home%20screen%20-%20all%20devices.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/2.home%20screen%20-%20all%20devices.png" alt="" /></a>
+					<div class="gallery_separator"></div>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/4.side%20menu.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/4.side%20menu.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/5.my%20smart%20keys.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/5.my%20smart%20keys.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/6.my%20access%20points.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/6.my%20access%20points.png" alt="" /></a>
+
+				</div>
 
 				<h2>MARKETING MATERIALS</h2>
 
