sab - added mobile mockups

--- a/smart_access_box.html
+++ b/smart_access_box.html
@@ -171,6 +171,35 @@
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
 				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup1.png"><img class="gallery4 left_image " id="function_candidates_1" src="img/sab/mockup1.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup2.png"><img class="gallery4 center_image " id="function_candidates_1" src="img/sab/mockup2.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup3.png"><img class="gallery4 center_image " id="function_candidates_1" src="img/sab/mockup3.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup4.png"><img class="gallery4 right_image " id="function_candidates_1" src="img/sab/mockup4.png" alt="" /></a>
+				</div>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup5.png"><img class="gallery4 left_image " id="function_candidates_1" src="img/sab/mockup5.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup6.png"><img class="gallery4 center_image " id="function_candidates_1" src="img/sab/mockup6.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup7.png"><img class="gallery4 center_image " id="function_candidates_1" src="img/sab/mockup7.png" alt="" /></a>
+				</div>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup8.png"><img class="gallery4 left_image " id="function_candidates_1" src="img/sab/mockup8.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup9.png"><img class="gallery4 center_image " id="function_candidates_1" src="img/sab/mockup9.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup10.png"><img class="gallery4 center_image " id="function_candidates_1" src="img/sab/mockup10.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original " href="img/sab/mockup11.png"><img class="gallery4 right_image " id="function_candidates_1" src="img/sab/mockup11.png" alt="" /></a>
+				</div>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
+					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
+					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
+					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
+					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
+					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
+					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
+				</p>
+
+				<div class="gallery">
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/0.splashscreen.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/0.splashscreen.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/1.home%20screen%20-%20in%20range.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/1.home%20screen%20-%20in%20range.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/2.home%20screen%20-%20all%20devices.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/2.home%20screen%20-%20all%20devices.png" alt="" /></a>
@@ -178,7 +207,6 @@
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/4.side%20menu.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/sab/4.side%20menu.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/5.my%20smart%20keys.png"><img class="gallery3 center_image with_border" id="function_candidates_1" src="img/sab/5.my%20smart%20keys.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/sab/6.my%20access%20points.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/sab/6.my%20access%20points.png" alt="" /></a>
-
 				</div>
 
 				<h2>MARKETING MATERIALS</h2>
