flexi meetup - medium article transfered

--- a/flexi_meetup.html
+++ b/flexi_meetup.html
@@ -101,78 +101,88 @@
 
 				<h2>THE STORY</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>18 months ago I enrolled in an online specialization offered by Coursera.org with the goal of sharpening
+					my design skills and obtaining a verifiable degree that would make it easier for me to get a full time
+					design job. After completing the seven classes, I had to work on a 10 week long capstone project that makes use of
+					all the knowledge aquired during the process and puts a cap on an 18 months effort.</p>
 
-                <!--<div class="gallery">-->
-				    <!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-                <!--</div>-->
+				<p>I started with a broad theme called Time and did some research to find out how people think about and
+					plan their time. Long story short, the most interesting problem was the friction around scheduling a meeting,
+					online or via phone, and I set a goal to solve this through clever design.</p>
 
-				<h2>COMPETITIVE ANALYSIS</h2>
+				<h2>STORYBOARDS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>The next step in the process was to summarize the research findings and translate the problem and the
+					solution in a more visual way, focusing only on the user need and the context around that need.
+					The storyboards above describe the interaction between an event host and one of it’s guests.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/fleximeetup/storyboards%20together.png"><img class="gallery1" id="function_candidates_1" src="img/fleximeetup/storyboards%20together.png" alt="" /></a>
+				</div>
 
-				<h2>THE MOBILE APP</h2>
+				<h2>PAPER MOCKUPS AND EARLY USER TESTING</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>One of the things emphasized during the class was the importance of a low fidelity prototype and it’s high
+					value when it comes to obtaining quick feedback.</p>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/fleximeetup/sketches.png"><img class="gallery1" id="function_candidates_1" src="img/fleximeetup/sketches.png" alt="" /></a>
+				</div>
 
-				<h2>THE ADMIN WEBSITE</h2>
+				<p>After sketching a few screens from the most important user flow of the solution, I started testing it
+					with a couple of friends. The findings were interesting and I obtained a list of enhancements to work on.
+					Besides testing with users, the class also teaches about the benefit of obtaining feedback from fellow
+					designers, by using a process pioneered by Jacob Nielsen, called heuristic evaluation.
+					For that, Coursera scheduled a virtual meetup with two of my peers and we got the chance to offer and
+					receive feedback on our work, using Nielsen’s heuristics as a metric for good design.</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<h2>THE INTERACTIVE PROTOTYPE</h2>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+				<p>After receiving enough feedback, it was time to move on to digital mockups that allow a bit more detail
+					and are closer to the final solution, both in how they look and feel.
+					I used Balsamiq to draw the screens and Invision to tie the screens together in a navigation structure.</p>
 
-				<h2>MARKETING MATERIALS</h2>
+				<p>Having an interactive prototype allowed me to do more user testing, in an easier way. The issues discovered
+					at this point were related to colors, button and label placement and less to navigation or the conceptual
+					model of the application.</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/fleximeetup/second%20balsamiq.png"><img class="gallery1" id="function_candidates_1" src="img/fleximeetup/second%20balsamiq.png" alt="" /></a>
+				</div>
 
-				<!--<div class="gallery">-->
-				<!--<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/function_candidates/1.png"><img class="gallery1" id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>-->
-				<!--</div>-->
+
+
+				<h2>ONLINE USABILITY TESTS</h2>
+
+				<p>One of the most interesting parts of the project was to do A/B testing on usertesting.com.
+					I had to design a study that would help me assess the impact of a change in one of the screens and do
+					the study with random people from all over the world. This was something new for me, because for the
+					first time I saw my design at work, without having the option to intervene and help the users in difficulty.</p>
+
+				<p>The test results were awesome, there were no major usability issues and I got some suggestions on how
+					to improve the look and feel of the application.</p>
+
+				<h2>HIGH FIDELITY MOCKUPS</h2>
+
+				<p>With most of the usability issues identified and solved, it was time to focus on details.
+					I defined the name of the application, a logo and the overall visual style. Since I was already
+					familiar with Google’s guidelines, I chose to use Material Design for the visuals.</p>
+
+				<div class="gallery">
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/1.splash.png"><img class="gallery3 left_image " id="function_candidates_1" src="img/fleximeetup/1.splash.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/2.homescreen.png"><img class="gallery3 center_image " id="function_candidates_1" src="img/fleximeetup/2.homescreen.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/3.new%20event%201.png"><img class="gallery3 right_image " id="function_candidates_1" src="img/fleximeetup/3.new%20event%201.png" alt="" /></a>
+					<div class="gallery_separator"></div>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/4.new%20event%202%201.png"><img class="gallery3 left_image " id="function_candidates_1" src="img/fleximeetup/4.new%20event%202%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/5.new%20event%202%202.png"><img class="gallery3 center_image " id="function_candidates_1" src="img/fleximeetup/5.new%20event%202%202.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="sadfasdf" href="img/fleximeetup/6.new%20event%203.png"><img class="gallery3 right_image " id="function_candidates_1" src="img/fleximeetup/6.new%20event%203.png" alt="" /></a>
+				</div>
+
+				<h2>CONCLUSIONS</h2>
+
+				<p>The entire project was an interesting challenge and more than anything forced me to do a lot of user
+					testing before getting to any conclusion.
+					Usertesting.com surprised me a lot and I think I will use their services in my future work.</p>
 
                 <div id="disqus_thread"></div>
                 <script>
