flexi meetup - medium article transfered

--- a/multi_color_overlay.html
+++ b/multi_color_overlay.html
@@ -192,7 +192,7 @@
 					some automatically discovered patterns of interest. That was done by way of smart filtering.</p>
 
 				<div class="gallery">
-                    <a class="fancybox" rel="group" title="Molecules table filtering" href="img/network_overlay/10.molecules_table_filters.png"><img class="gallery1" id="network_overlay_2" src="img/network_overlay/10.molecules_table_filters.png" alt="" /></a>
+                    <a class="fancybox" rel="group" title="Molecules table filtering" href="img/network_overlay/10.molecules_table_filters.png"><img class="gallery1center" id="network_overlay_2" src="img/network_overlay/10.molecules_table_filters.png" alt="" /></a>
                 </div>
 
 				<p>The dataset picker had also an important role in the design because it allowed selection of multiple
