misc enhancements to isoprofiler article

--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -151,10 +151,11 @@
 				and experimented with multiple ways of displaying quantitative data.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery4 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%202.png"><img class="gallery4 center_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%202.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%203.png"><img class="gallery4 center_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%203.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery4 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%201.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%201.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%202.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%202.png" alt="" /></a>
+					<div class="gallery_separator"></div>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%203.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%203.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
 				</div>
 
 				<h3>Molecules view</h3>
@@ -163,11 +164,7 @@
 					being analyzed side by side. That is the reason why all the following mockups have both single and multiple datasets.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_1.png"><img class="gallery2 left_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_1.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_2.png"><img class="gallery2 right_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_2.png" alt="" /></a>
-				    <p class="gallery_separator"></p>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_3.png"><img class="gallery2 left_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_3.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_5.png"><img class="gallery2 right_image" id="function_candidates_1" src="img/isoprofiler/dataset_view_5.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_variations.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/dataset_view_variations.png" alt="" /></a>
 				</div>
 
 				<p>All the above ideas were discussed and ultimately abandoned for various reasons. The version that
