--- a/parking_plus.html
+++ b/parking_plus.html
@@ -273,7 +273,7 @@
 				</div>
 
 				<div class="gallery">
-					<video preload="metadata" controls class="gallery1" poster="img/parkingplus/video/video-poster.png">
+					<video preload="none" controls class="gallery1" poster="img/parkingplus/video/video-poster.png">
 						<source src="img/parkingplus/video/explainer%20video.mp4" type="video/mp4">
 					</video>
 				</div>
