--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -207,8 +207,8 @@
 				 criteria across multiple properties and to have the filters always visible.</p>
 
 				<div class="gallery">
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%205.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%205.png" alt="" /></a>
-					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%206.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%206.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%205.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%205%20-%20thumbnail.png" alt="" /></a>
+					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%206.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%206%20-%20thumbnail.png" alt="" /></a>
 				</div>
 
 				<div class="gallery">
