--- a/parking_plus.html
+++ b/parking_plus.html
@@ -103,25 +103,25 @@
 
 				<h2>THE STORY</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>I was attending my first UX local meetup when I met the project manager of PARKING PLUS. He was there
+					to present the project and find a design collaborator and I was there to find a side project to get
+					some design experience, besides my full time software development job at the time.</p>
+
+				<p>An interview and six months later, we started working together on a product that was beginning
+					to have a shape. At the time I joined the project, they had already developed a mobile prototype
+					and part of the backend services.</p>
+
+				<p>I worked mostly nights and weekends and met with the team once or twice a week to sync up. Besides the
+					project manager, I was in close contact with the technical lead and the remote visual designer. The high
+					fidelity mobile screens and the printed marketing materials and not my work, but I contributed heavily during
+					ideation and countless feedback sessions.</p>
 
 				<h2>COMPETITIVE ANALYSIS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>We started by analyzing the existing parking apps, most of them from San Francisco, but also from England,
+					Germany and Sweden. I spent a lot of time experiencing the competition, taking snapshots of the most
+					interesting ideas and evaluating them in terms of usability and functionality. This gave us a pretty good idea
+				of what's out there and where we stand with the current prototype.</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/competitive_analysis_small.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/competitive_analysis_small.png" alt="" /></a>
