--- a/parking_plus.html
+++ b/parking_plus.html
@@ -116,7 +116,7 @@
 					fidelity mobile screens and the printed marketing materials and not my work, but I contributed heavily during
 					ideation and countless feedback sessions.</p>
 
-				<h2>COMPETITIVE ANALYSIS</h2>
+				<h2>COMPETITOR ANALYSIS</h2>
 
 				<p>We started by analyzing the existing parking apps, most of them from San Francisco, but also from England,
 					Germany and Sweden. I spent a lot of time experiencing the competition, taking snapshots of the most
@@ -127,20 +127,33 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/competitive_analysis_small.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/competitive_analysis_small.png" alt="" /></a>
 				</div>
 
+				<p>A lot of competitors were pointing to parking lots on a map, some of them were showing street parking as well,
+					but very few were displaying availability information and almost none of them were allowing bookings.</p>
+
+				<p>Our goal was to improve the parking experience by:
+
+				<ul class="article_list">
+					<li>showing availability information for both streets and garages</li>
+					<li>allowing bookings in secured lots (this became a separate product)</li>
+					<li>offering flexible mobile payments</li>
+				</ul>
+				</p>
+
 				<h2>STORYBOARDS</h2>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis lacus consectetur, feugiat tortor et,
-					condimentum nisl. Vestibulum pellentesque mauris non neque consequat, sit amet imperdiet metus rhoncus.
-					Morbi sit amet nisi vestibulum, laoreet est vel, pharetra purus. Vestibulum fringilla aliquam ante ac ornare.
-					Curabitur faucibus ornare ipsum sit amet rhoncus. Praesent egestas tincidunt diam eu pretium. Mauris tempus ut
-					odio pretium rutrum. Sed et eros orci. Etiam varius luctus eros ut venenatis. Maecenas elit tellus, sodales
-					eget sem sed, eleifend posuere risus. Curabitur ipsum dolor, vulputate non sodales et, elementum nec mauris.
-					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
-					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
+				<p>The ability to pay in advance for a guaranteed parking spot was a big differentiator and we wanted to
+					make sure we get it right from the beginning. This is why we focused a lot on the entire process of
+					looking for parking, booking it and accessing the secured premises.</p>
+
+				<p>Next you can see a driver parking in a private garage and paying on the fly</p>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/storyboard1.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/storyboard1.png" alt="" /></a>
-					<p class="gallery_separator"></p>
+				</div>
+
+				<p>and a driver accessing a previously booked garage.</p>
+
+				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/storyboard2.png"><img class="gallery1" id="function_candidates_1" src="img/parkingplus/storyboard2.png" alt="" /></a>
 				</div>
 
