parking plus - wrote more content improved headings globally

--- a/be_healthy.html
+++ b/be_healthy.html
@@ -143,7 +143,7 @@
 					that would cover all the needs discovered previously. After getting feedback from my peers, I chose
 					to go forward with the following design.</p>
 
-				<h3>Website</h3>
+				<h3>WEBSITE</h3>
 
 				<p>The web application is intended for home usage and leverages beautiful, large, appealing images and a
 					lot of educational material. The following screens are the screens required to complete the scenario
@@ -159,7 +159,7 @@
 				    <a class="fancybox" rel="web_wireframes" title="The list of ingredients" href="img/hci_project/digital mockups/6.list.png"><img class="gallery4 center_image" id="function_candidates_1" src="img/hci_project/digital mockups/6.list.png" alt=""/></a>
 				    <a class="fancybox" rel="web_wireframes" title="Planning the shopping trip" href="img/hci_project/digital mockups/7.trip.png"><img class="gallery4 center_image" id="function_candidates_1" src="img/hci_project/digital mockups/7.trip.png" alt=""/></a>
                 </div>
-				<h3>Mobile</h3>
+				<h3>MOBILE</h3>
 
 				<p>The mobile version of the service is intended to help complete the scenarios started in the web
 					version and offers actions needed when the user is gone shopping for healthy food, exercising or
@@ -174,7 +174,7 @@
 					prototypes to be used when testing with real users. Both web and mobile versions were created using
 					Just In Mind prototyping tool.</p>
 
-				<h3>Website</h3>
+				<h3>WEBSITE</h3>
 
                 <div class="gallery">
 				    <a class="fancybox" rel="web_prototypes" title="Home screen" href="img/hci_project/hifi prototypes/web version/1.homescreen.jpg"><img class="gallery4 left_image with_border" id="function_candidates_1" src="img/hci_project/hifi prototypes/web version/1.homescreen.jpg" alt=""/></a>
@@ -191,7 +191,7 @@
 				    <a class="fancybox" rel="web_prototypes" title="Planning the shopping trip" href="img/hci_project/hifi prototypes/web version/10.shopping_trip.jpg"><img class="gallery4 center_image with_border" id="function_candidates_1" src="img/hci_project/hifi prototypes/web version/10.shopping_trip.jpg" alt=""/></a>
                 </div>
 
-				<h3>Mobile</h3>
+				<h3>MOBILE</h3>
 
                 <div class="gallery">
 				    <a class="fancybox" rel="mobile_prototypes" title="Home screen" href="img/hci_project/hifi prototypes/mobile version/1.homescreen.jpg"><img class="gallery4 left_image" id="function_candidates_1" src="img/hci_project/hifi prototypes/mobile version/1.homescreen.jpg" alt=""/></a>
