--- a/quesee.html
+++ b/quesee.html
@@ -248,7 +248,7 @@
                 <p>It took more than a few months for the design to come to life and there were a lot of tiny additional
                     design decisions that were made along the way to accommodate all the requirements.</p>
 
-                <h3>Visualizing and Editing tests</h3>
+                <h3>VISUALIZING AND EDITING TESTS</h3>
 
                 <p>Some of the screens are still not implemented, but I added them anyway to showcase a flow; to see
                     how the user drills down the test explorer section from the left.</p>
@@ -270,7 +270,7 @@
                     technique also known as in-place editing. Please notice the consistency between the visual tags and the
                     save button that appears only when needed.</p>
 
-                <h3>Test Execution History</h3>
+                <h3>TEST EXECUTION HISTORY</h3>
 
                 <p>The colored chart displays the history of the test executions. Besides displaying information, it is
                     also used for selecting a particular test execution, in order to investigate the reasons behind the
@@ -280,7 +280,7 @@
                     there is an interesting design story behind it.</p>
 
 
-                <h3>Recording and Replaying tests</h3>
+                <h3>RECORDING AND REPLAYING TESTS</h3>
 
                 <p>The whole idea behind the two most important features of the application, was to provide immediate
                     feedback and have the status of the application visible all the time. I used animation to convey the
@@ -291,7 +291,7 @@
                     <a class="fancybox" rel="implementation" title="Recording tests, the dimmer items represent duplicated steps that will not be recorded" href="img/quesee/after/implementation/7.recording_sceanrio.PNG"><img class="gallery2 left_image with_border" id="impementation_7" src="img/quesee/after/implementation/7.recording_sceanrio.PNG" alt="" /></a>
                     <a class="fancybox" rel="implementation" title="Running a test suite" href="img/quesee/after/implementation/5.running_tests.png"><img class="gallery2 right_image with_border" id="impementation_5" src="img/quesee/after/implementation/5.running_tests.png" alt="" /></a>
                 </div>
-                <h3>Comparing Objects</h3>
+                <h3>COMPARING OBJECTS</h3>
 
                 <p>The comparison view leverages the object explorer view, decorating the tree elements with visual
                     annotations, in order to convey the reason behind the failures.</p>
@@ -312,7 +312,7 @@
                     advantages and disadvantages. The positives are the ease of implementation and integration in the new
                     design. The negative is the color coding that needs to be learned by the users.</p>
 
-                <h3>Reports</h3>
+                <h3>REPORTS</h3>
                 <p>This is definitely a section that can be improved and I am still not happy with the implemented solution.</p>
                 <p>I started from the following two ideas:</p>
 
