--- a/isoprofiler.html
+++ b/isoprofiler.html
@@ -158,7 +158,7 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/A4%204x8%20grid%204.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/isoprofiler/A4%204x8%20grid%204.png" alt="" /></a>
 				</div>
 
-				<h3>Molecules view</h3>
+				<h3>MOLECULES VIEW</h3>
 
 				<p>The solution needed to work for singular experiments, as well as for multiple experiments that were
 					being analyzed side by side. That is the reason why all the following mockups have both single and multiple datasets.</p>
@@ -177,7 +177,7 @@
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/isoprofiler/dataset_view_4.png"><img class="gallery1" id="function_candidates_1" src="img/isoprofiler/dataset_view_4.png" alt="" /></a>
 				</div>
 
-				<h3>Isoforms view</h3>
+				<h3>ISOFORMS VIEW</h3>
 
 				<p>Once an interesting molecule has been identified in the molecules view, it can be explored in more
 					detail in the isoforms view. This table offers precise information about expression measurements,
