--- a/parking_plus.html
+++ b/parking_plus.html
@@ -168,14 +168,14 @@
 					Sed venenatis a dolor vitae faucibus. Curabitur aliquet metus in velit aliquet lacinia.
 					Sed leo erat, euismod sed elementum eget, volutpat nec lectus.</p>
 
-				<h3>Hand drawn mockups</h3>
+				<h3>HAND DRAWN MOCKUPS</h3>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid1.png"><img class="gallery2 left_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid1.png" alt="" /></a>
 					<a class="fancybox" rel="group" title="Original version with unsorted list of suggestions" href="img/parkingplus/A4%204x8%20grid2.png"><img class="gallery2 right_image with_border" id="function_candidates_1" src="img/parkingplus/A4%204x8%20grid2.png" alt="" /></a>
 				</div>
 
-				<h3>Android mobile screens</h3>
+				<h3>ANDROID MOBILE SCREENS</h3>
 
 				<div class="gallery">
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/1.map.png"><img class="gallery3 left_image with_border" id="function_candidates_1" src="img/parkingplus/1.map.png" alt="" /></a>
@@ -183,7 +183,7 @@
 					<a class="fancybox" rel="group" title="sadfasdf" href="img/parkingplus/3.payments.png"><img class="gallery3 right_image with_border" id="function_candidates_1" src="img/parkingplus/3.payments.png" alt="" /></a>
 				</div>
 
-				<h3>Animations</h3>
+				<h3>ANIMATIONS</h3>
 
 				<div class="gallery">
 					<div class="gallery2 left_image with_border">
